--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lain"]
 	path = lain
 	url = git@github.com:copycat-killer/lain.git
+[submodule "awesome-copycats"]
+	path = awesome-copycats
+	url = https://github.com/copycat-killer/awesome-copycats.git
